@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023 Obeo.
+ * Copyright (c) 2023, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -10,8 +10,12 @@
  * Contributors:
  *     Obeo - initial API and implementation
  *******************************************************************************/
+import { Theme } from '@material-ui/core/styles';
+import { ReactNode } from 'react';
 
-export interface ViewsProps {
-  applicationIcon?: JSX.Element;
-  applicationBarMenu?: JSX.Element;
+export interface SiriusWebApplicationProps {
+  httpOrigin: string;
+  wsOrigin: string;
+  theme?: Theme;
+  children?: ReactNode;
 }
